--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-  <body onload="setScrollPosition()">
+  <body>
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -69,13 +69,14 @@
     <!-- endbuild -->
 
     <script type="text/javascript">
-      //window.scrollTo(0, document.body.clientHeight); 
       var setScrollPosition = function () {
         if ($(document).scrollTop() == 0) {
           $('html, body').scrollTop( $(document).height() );
         }
       };
+
       $('html, body').scrollTop( $(document).height() );
+      $(window).load(setScrollPosition);
     </script>
   </body>
 </html>
