Added footer icons

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -52,7 +53,14 @@
       </div>
 
       <div class="footer">
-        <p>♥ from the Yeoman team</p>
+        <i class="fa fa-youtube"></i>
+        <i class="fa fa-vimeo"></i>
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-pinterest-p"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-linkedin"></i>
+        <i class="fa fa-google-plus"></i>
       </div>
     </div>
     
