--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,9 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     
+    <div class="moon">
+    </div>
+
     <div class="container content">
       <div class="header">
         <h3 class="text-muted">Narrator Group</h3>
