--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,18 @@
         <img class="phoneBackground" src="images/Mountain.png" />
       </div>
 
-      <div class="footer">
+      
+    </div>
+
+    <div class="footer">
+      <video style="width: 100%; height: 100%;" autoplay loop>
+        <source src="video/campfire-hd.mp4" type="video/mp4">
+        For the best experience, please view this site in a modern browser.
+      </video>
+      <div id="scrollUp" class="scroll-up">
+        <img alt="Scroll Up" src="images/scroll-up.png" width="100" height="100">
+      </div>
+      <div class="social social-fixed">
         <i class="fa fa-youtube"></i>
         <i class="fa fa-vimeo"></i>
         <i class="fa fa-facebook"></i>
@@ -49,14 +60,8 @@
         <i class="fa fa-twitter"></i>
         <i class="fa fa-linkedin"></i>
         <i class="fa fa-google-plus"></i>
-        <p>Scroll Up</p>
       </div>
     </div>
-
-    <video style="width: 100%; height: 100%;" autoplay>
-      <source src="video/campfire-hd.mp4" type="video/mp4">
-      For the best experience, please view this site in a modern browser.
-    </video>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
