--- a/app/index.html
+++ b/app/index.html
@@ -31,13 +31,9 @@
     <div class="moon">
     </div>
 
-    <div class="container content">
-      <div class="row">
-        <img class="phoneBackground" src="images/Forest.png" />
-        <img class="phoneBackground" src="images/Space.jpg" />
-        <img class="phoneBackground" src="images/Soviet.jpg" />
+    <div>
+      <div>
         <img class="phoneBackground" src="images/Port.jpg" />
-        <img class="phoneBackground" src="images/Mountain.png" />
       </div>
 
       
@@ -52,14 +48,14 @@
         <img alt="Scroll Up" src="images/scroll-up.png" width="100" height="100">
       </div>
       <div class="social social-fixed">
-        <i class="fa fa-youtube"></i>
-        <i class="fa fa-vimeo"></i>
-        <i class="fa fa-facebook"></i>
-        <i class="fa fa-instagram"></i>
-        <i class="fa fa-pinterest-p"></i>
-        <i class="fa fa-twitter"></i>
-        <i class="fa fa-linkedin"></i>
-        <i class="fa fa-google-plus"></i>
+        <a href="#"><i class="fa fa-youtube"></i></a>
+        <a href="#"><i class="fa fa-vimeo"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <a href="#"><i class="fa fa-pinterest-p"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-google-plus"></i></a>
       </div>
     </div>
 
