--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
     
     <!-- build:js scripts/plugins.js -->
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/jd-js-lib/embers/embers.min.js"></script>
     <!-- endbuild -->
     
     <!-- build:js scripts/main.js -->
