Adding in the embers.

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,8 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     
+    
+
     <div class="moon">
     </div>
 
@@ -59,6 +61,8 @@
       </div>
     </div>
 
+    <canvas id="canvasOverlay"></canvas>
+
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -68,6 +72,8 @@
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.3.1/gl-matrix-min.js"></script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
