Removed filler images and added spacer div

--- a/app/index.html
+++ b/app/index.html
@@ -34,8 +34,7 @@
     </div>
 
     <div>
-      <div>
-        <img class="phoneBackground" src="images/Port.jpg" />
+      <div class="background-spacer">
       </div>
 
       
