--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="footer">
-      <video style="width: 100%; height: 100%;" autoplay loop>
+      <video id="campfire" style="width: 100%; height: 100%;" autoplay loop>
         <source src="video/campfire-hd.mp4" type="video/mp4">
         For the best experience, please view this site in a modern browser.
       </video>
