Cleaning up embers so that the canvas is properly id'd as embers.

--- a/app/index.html
+++ b/app/index.html
@@ -186,7 +186,7 @@
           <a href="#"><i class="fa fa-google-plus"></i></a>
         </div>
       </div>
-      <canvas id="canvasOverlay"></canvas>
+      <canvas id="embers"></canvas>
       <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
       <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
