--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     </div>
     <div>
       <div id="section-your-story" class="section">
+      <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
         <div id="your-story-wrapper">
           <div class="quote">
             <div class="quote-text quote-orange">&quot;Scratch the surface in a typical boardroom, and we&#8217;re all just cavemen with briefcases, hungry for a wise man to tell us stories.&quot;</div>
@@ -90,6 +91,7 @@
         </div>
       </div>
       <div id="section-story-workshop" class="section">
+      <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
         <div id="workshop-wrapper">
           <div>
             <h6>Strategic Services</h6>
@@ -108,6 +110,7 @@
         </div>
       </div>
       <div id="section-work" class="section">
+      <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
         <div id="work-wrapper">
           <h6>WORK</h6>
           <h2>Stories we&#8217;ve developed and recently told</h2>
@@ -124,6 +127,7 @@
         </div>
       </div>
       <div id="section-approch" class="section">
+      <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
         <div id="approach-wrapper">
           <h6>APPROACH</h6>
           <h2>Stories are better than ads</h2>
@@ -143,6 +147,7 @@
         </div>
       </div>
       <div id="section-about" class="section">
+      <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
         <div id="about-wrapper">
           <h6>ABOUT</h6>
           <h2>Creating stories that sell</h2>
@@ -157,6 +162,7 @@
       </div>
     </div>
     <div class="footer">
+      <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
       <div id="campfire-wrapper">
         <div><span>Some brands have a good story</span> <span>but aren&#8217;t telling it well.  Others don&#8217;t know or </span><span>have lost sight of their story.</span></div>
         <a id="btn-find-story" class="btn btn-default" href="#">FINDING YOUR STORY</a>
