Minor updats to play around with parallax effects.

--- a/app/index.html
+++ b/app/index.html
@@ -167,7 +167,7 @@
         For the best experience, please view this site in a modern browser.
       </video>
       <div id="section-campfire-child">
-        <div class="relative">
+        <div class="relative fill">
           
           <div id="campfire-wrapper">
             <div><span>Some brands have a good story</span> <span>but aren&#8217;t telling it well.  Others don&#8217;t know or </span><span>have lost sight of their story.</span></div>
@@ -177,7 +177,7 @@
           <div id="campfire-aside">
             <div>The human need for stories is enduring and mysterious. Great stories stay with us&#8212;and the best storytellers make us want to linger and find out what happens next.</div>
           </div>
-          <div id="scrollUp" class="scroll-up">
+          <div class="scroll-up">
             <img alt="Scroll Up" src="images/scroll-up.png" width="100" height="100">
           </div>
           <div class="social social-fixed">
