--- a/app/index.html
+++ b/app/index.html
@@ -30,15 +30,12 @@
     <div id="section-header">
       <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
     </div>
-
     <div class="moon">
     </div>
-
     <video id="campfire-video" autoplay loop>
       <source src="video/campfire-hd.mp4" type="video/mp4">
       For the best experience, please view this site in a modern browser.
     </video>
-
     <!-- <div id="section-your-story" class="section">
       <img class="narrator-logo" src="images/logo-n.png" alt="Narrator Group" />
       <div id="your-story-wrapper">
@@ -118,40 +115,53 @@
           <img src="images/image-woman.jpg" alt="Woman" />
         </div>
       </div>
-    </div> 
+    </div>-->
+    <div id="section-work-trigger"></div>
     <div id="section-work" class="section">
       <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
-      <div id="work-wrapper">
-        <h6>WORK</h6>
-        <h2>Stories we&#8217;ve developed and recently told</h2>
-        <img src="images/video-1.jpg" alt="Demo video" />
-        <a class="btn btn-default" href="#">SEE MORE</a>
-        <div>
+      <div id="section-work-child">
+        <div id="work-quote">
+          <div class="relative">&nbsp;<div class="white-line"></div></div>
           <div class="quote">
-            <div class="quote-text quote-yellow">&quot;It&#8217;s indisputable that the best way to persuqde someone is by telling a compelling story.&quot;</div>
+            <div class="quote-text quote-yellow">&quot;It&#8217;s indisputable that the best way to persuade<br> someone is by telling a compelling story.&quot;</div>
             <div class="quote-attrib">AD WEEK</div>
           </div>
-          <img src="images/video-2.jpg" alt="Demo video" />
-          <img src="images/video-3.jpg" alt="Demo video" />
+          <div class="relative">&nbsp;<div class="white-line"></div></div>
         </div>
+        <h4>WORK</h4>
+        <h1>Stories we&#8217;ve developed<br> and recently told</h1>
+        <div id="work-recent-stories" class="clearfix">
+          <div class="column-left">
+            <img src="images/video-1.jpg" alt="Demo video" />
+          </div>
+          <div class="column-right">
+            <img src="images/video-2.jpg" alt="Demo video" />
+            <img src="images/video-3.jpg" alt="Demo video" />
+          </div>
+        </div>
+        <a class="btn btn-default" href="#">SEE MORE</a>
       </div>
     </div>
+    <div id="section-approach-trigger"></div>
     <div id="section-approach" class="section">
-      <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
-      <div id="approach-wrapper">
-        <h6>APPROACH</h6>
-        <h2>Stories are better than ads</h2>
-        <div>There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stoies we care about. But stories are different. A well-told stoy reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We gro brands by turning marketing messages into stories that people want to see and hear.
+      <div id="section-approach-child">
+        <h4>APPROACH</h4>
+        <h1>Stories are better than ads</h1>
+        <div class="column-left">
+          <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stoies we care about. But stories are different. A well-told stoy reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
+          </div>
+          <div class="relative">&nbsp;<div class="white-line"></div></div>
+          <div class="quote">
+            <div class="quote-text quote-blue">&quot;Narrator Group&#8217;s work is the most effective<br> I&#8217;ve ever tested. That includes all the compaigns<br>  I measured during my 20 years at Gallup.&quot;</div>
+            <div class="quote-attrib">DAVID NUTTER, SIGMA GROUP</div>
+          </div>
+          <div class="relative">&nbsp;<div class="white-line"></div></div>
         </div>
-        <div class="quote">
-          <div class="quote-text quote-blue">&quot;Narrator Group&#8217;s work is the most effective I&#8217;ve ever tested. That includes all the compaigns I measured during my 20 years at Gallup.&quot;</div>
-          <div class="quote-attrib">DAVID NUTTER, SIGMA GROUP</div>
-        </div>
-        <div>
+        <div class="column-right">
           <img src="images/video-1.jpg" alt="Demo video" />
         </div>
       </div>
-    </div> -->
+    </div>
     <div id="section-about-trigger"></div>
     <div id="section-about" class="section">
       <div id="section-about-child">
@@ -166,7 +176,7 @@
           <div class="quote-attrib">BUSINESS2COMMUNITY</div>
         </div>
         <div class="relative"><div class="white-line"></div>&nbsp;</div>
-         
+        
       </div>
     </div>
     <div id="section-campfire-trigger"></div>
@@ -189,7 +199,6 @@
           </div>
         </div>
       </div>
-
       <div class="social social-fixed">
         <a href="#"><i class="fa fa-youtube"></i></a>
         <a href="#"><i class="fa fa-vimeo"></i></a>
@@ -216,10 +225,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/CSSPlugin.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
-
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>    
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/ScrollMagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
