Styled work section

--- a/app/index.html
+++ b/app/index.html
@@ -120,42 +120,40 @@
     <div id="section-work" class="section">
       <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
       <div id="section-work-child">
-        <div id="work-quote">
-          <div class="relative">&nbsp;<div class="white-line"></div></div>
-          <div class="quote">
-            <div class="quote-text quote-yellow">&quot;It&#8217;s indisputable that the best way to persuade<br> someone is by telling a compelling story.&quot;</div>
-            <div class="quote-attrib">AD WEEK</div>
-          </div>
-          <div class="relative">&nbsp;<div class="white-line"></div></div>
-        </div>
-        <h4>WORK</h4>
-        <h1>Stories we&#8217;ve developed<br> and recently told</h1>
-        <div id="work-recent-stories" class="clearfix">
-          <div class="column-left">
-            <img src="images/video-1.jpg" alt="Demo video" />
-          </div>
-          <div class="column-right">
-            <img src="images/video-2.jpg" alt="Demo video" />
-            <img src="images/video-3.jpg" alt="Demo video" />
-          </div>
-        </div>
+        <div class="column-left">
+          <h3>WORK</h3>
+          <h1>Stories we&#8217;ve developed<br> and recently told</h1>
+          <img src="images/video-1.jpg" alt="Demo video" />
         <a class="btn btn-default" href="#">SEE MORE</a>
+        </div>
+        <div class="column-right">
+          <div id="work-quote">
+            <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+            <div class="quote">
+              <div class="quote-text quote-yellow">&quot;It&#8217;s indisputable that the best way to persuade<br> someone is by telling a compelling story.&quot;</div>
+              <div class="quote-attrib">AD WEEK</div>
+            </div>
+            <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+          </div>
+          <img src="images/video-2.jpg" alt="Demo video" />
+          <img src="images/video-3.jpg" alt="Demo video" />
+        </div>
       </div>
     </div>
     <div id="section-approach-trigger"></div>
     <div id="section-approach" class="section">
       <div id="section-approach-child">
-        <h4>APPROACH</h4>
+        <h3>APPROACH</h3>
         <h1>Stories are better than ads</h1>
         <div class="column-left">
           <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stoies we care about. But stories are different. A well-told stoy reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
           </div>
-          <div class="relative">&nbsp;<div class="white-line"></div></div>
+          <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
           <div class="quote">
             <div class="quote-text quote-blue">&quot;Narrator Group&#8217;s work is the most effective<br> I&#8217;ve ever tested. That includes all the compaigns<br>  I measured during my 20 years at Gallup.&quot;</div>
             <div class="quote-attrib">DAVID NUTTER, SIGMA GROUP</div>
           </div>
-          <div class="relative">&nbsp;<div class="white-line"></div></div>
+          <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
         </div>
         <div class="column-right">
           <img src="images/video-1.jpg" alt="Demo video" />
@@ -165,17 +163,17 @@
     <div id="section-about-trigger"></div>
     <div id="section-about" class="section">
       <div id="section-about-child">
-        <h4>ABOUT</h4>
+        <h3>ABOUT</h3>
         <h1>Creating stories that sell</h1>
         <div class="main">Companies and brands come to us to draw and move audiences. Our sole focus is helping brands uncover the story that makes them distinctive and then tell that story well. Clients have looked to us to launch new brands. To revive old or stagnating ones. To talk to people across the country and film around the world.</div>
         <div class="sub">And they&#8217;ve relied on us to bring a room full of folded-arm executives to enthusiastic agreement on a messaging strategy. Achieving the business results our clients seek begins with showing them how to tell a better brand story.
         </div>
-        <div class="relative">&nbsp;<div class="white-line"></div></div>
+        <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
         <div class="quote">
           <div class="quote-text quote-orange">&quot;90% of people watch videos to <br> guide product decision making&quot;</div>
           <div class="quote-attrib">BUSINESS2COMMUNITY</div>
         </div>
-        <div class="relative"><div class="white-line"></div>&nbsp;</div>
+        <div class="relative quote-line"><div class="white-line"></div>&nbsp;</div>
         
       </div>
     </div>
