Converted Work section to use flexbox css

--- a/app/index.html
+++ b/app/index.html
@@ -120,13 +120,11 @@
     <div id="section-work" class="section">
       <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
       <div id="section-work-child">
-        <div class="column-left">
-          <h3>WORK</h3>
-          <h1>Stories we&#8217;ve developed<br> and recently told</h1>
-          <img src="images/video-1.jpg" alt="Demo video" />
-        <a class="btn btn-default" href="#">SEE MORE</a>
-        </div>
-        <div class="column-right">
+        <div id="work-header">
+          <div id="work-title">
+            <h3>WORK</h3>
+            <h1>Stories we&#8217;ve developed<br> and recently told</h1>
+          </div>
           <div id="work-quote">
             <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
             <div class="quote">
@@ -135,8 +133,16 @@
             </div>
             <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
           </div>
-          <img src="images/video-2.jpg" alt="Demo video" />
-          <img src="images/video-3.jpg" alt="Demo video" />
+        </div>
+        <div id="work-recent-stories">
+          <div id="work-story-1"><img src="images/video-1.jpg" alt="Demo video" /></div>
+          <div id="work-stories-right">
+            <div id="work-story-2"><img src="images/video-2.jpg" alt="Demo video" /></div>
+            <div id="work-story-3"><img src="images/video-3.jpg" alt="Demo video" /></div>
+          </div>
+        </div>
+        <div id="work-btn-wrapper">
+          <a class="btn btn-default" href="#">SEE MORE</a>
         </div>
       </div>
     </div>
