--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
@@ -26,7 +25,6 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <canvas id="embers"></canvas>
-
     <div id="section-header">
       <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
     </div>
@@ -96,29 +94,32 @@
           </div>
         </div>
       </div>
-    </div>
-    <div id="section-story-workshop" class="section">
-      <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
-      <div id="workshop-wrapper">
-        <div>
-          <h6>Strategic Services</h6>
-          <h2>Finding your story</h2>
-          <div>Most maketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
-          <div>You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
+    </div>-->
+    <div id="section-workshop-trigger"></div>
+    <div id="section-workshop" class="section">
+      <div id="section-workshop-child">
+        <div id="work-right">
+          <h4>Strategic Services</h4>
+          <h1>Finding your story</h1>
+          <div class="main">Most maketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
+          <div class="main">You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
           <a class="btn btn-default" href="#">STORY WORKSHOP DETAILS</a>
         </div>
-        <div>
-          <div class="quote">
-            <div class="quote-text quote-blue">&quot;Real cleverness must stem from knowledge of a product.&quot;</div>
-            <div class="quote-attrib">BILL BERNBACH</div>
+        <div id="work-left">
+          <div id="workshop-quote">
+            <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+            <div class="quote">
+              <div class="quote-text quote-blue">&quot;Real cleverness must stem<br> from knowledge of a product.&quot;</div>
+              <div class="quote-attrib">BILL BERNBACH</div>
+            </div>
+            <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
           </div>
           <img src="images/image-woman.jpg" alt="Woman" />
         </div>
       </div>
-    </div>-->
+    </div>
     <div id="section-work-trigger"></div>
     <div id="section-work" class="section">
-      <img class="narrator-logo" src="images/logo-n.png" alt="Narrator group logo" />
       <div id="section-work-child">
         <div id="work-header">
           <div id="work-title">
@@ -180,14 +181,12 @@
           <div class="quote-attrib">BUSINESS2COMMUNITY</div>
         </div>
         <div class="relative quote-line"><div class="white-line"></div>&nbsp;</div>
-
       </div>
     </div>
     <div id="section-campfire-trigger"></div>
     <div id="section-campfire" class="section">
       <div id="section-campfire-child">
         <div class="relative fill">
-
           <div id="campfire-wrapper">
             <h1>Some brands have a good story</h1>
             <h1>but aren&#8217;t telling it well.  Others don&#8217;t know or </h1>
@@ -214,7 +213,6 @@
         <a href="#"><i class="fa fa-google-plus"></i></a>
       </div>
     </div>
-
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -235,13 +233,10 @@
     <script src="/bower_components/ScrollMagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
     <!-- build:js scripts/plugins.js -->
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <!-- endbuild -->
-
     <script src="/jd-js-lib/narrator/narrator.min.js"></script>
-
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <script src="scripts/parallax.js"></script>
