In progress styling of top two sections

--- a/app/index.html
+++ b/app/index.html
@@ -34,14 +34,18 @@
       <source src="video/campfire-hd.mp4" type="video/mp4">
       For the best experience, please view this site in a modern browser.
     </video>
-    <!-- <div id="section-your-story" class="section">
-      <img class="narrator-logo" src="images/logo-n.png" alt="Narrator Group" />
-      <div id="your-story-wrapper">
-        <div class="quote">
-          <div class="quote-text quote-orange">&quot;Scratch the surface in a typical boardroom, and we&#8217;re all just cavemen with briefcases, hungry for a wise man to tell us stories.&quot;</div>
-          <div class="quote-attrib">ALAN KAY, VP WALT DISNEY</div>
+    <div id="section-contact-trigger"></div>
+    <div id="section-contact" class="section">
+      <div id="section-contact-child">
+        <div id="contact-quote">
+          <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
+          <div class="quote">
+            <div class="quote-text quote-orange">&quot;Scratch the surface in a typical boardroom, and we&#8217;re all just cavemen with briefcases, hungry for a wise man to tell us stories.&quot;</div>
+            <div class="quote-attrib">ALAN KAY, VP WALT DISNEY</div>
+          </div>
+          <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
         </div>
-        <div>
+        <div id="contact-right">
           <div>Let&#8217;s find your best story and tell it together</div>
           <input type="text" placeholder="NAME" />
           <input type="text" placeholder="PHONE NUMBER" />
@@ -55,46 +59,51 @@
             <span>storyteller@narratorgroup.com</span>
           </div>
         </div>
-        <div>
-          <h2>Telling your story well</h2>
-          <div>even the best strategy for the greatest product or service quickly runs adrift without the right creative partner. The right reative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a veideo, logo, web banner, website, or brand music, we work with you to create something memorable and true.</div>
-          <div>
-            <div class="story-type">
-              <img src="images/icon-video.png" alt="Video icon" />
-              <span>Video</span>
-            </div>
-            <div class="story-type">
-              <img src="images/icon-branding.png" alt="Branding icon" />
-              <span>Branding</span>
-            </div>
-            <div class="story-type">
-              <img src="images/icon-music.png" alt="Music icon" />
-              <span>Music</span>
-            </div>
-            <div class="story-type">
-              <img src="images/icon-design.png" alt="Design icon" />
-              <span>Design</span>
-            </div>
-            <div class="story-type">
-              <img src="images/icon-digital.png" alt="Digital icon" />
-              <span>Digital</span>
-            </div>
-            <div class="story-type">
-              <img src="images/icon-social.png" alt="Social icon" />
-              <span>Social</span>
-            </div>
-            <div class="story-type">
-              <img src="images/icon-content.png" alt="Content icon" />
-              <span>Content</span>
-            </div>
-            <div class="story-type">
-              <img src="images/icon-broadcast.png" alt="Broadcast icon" />
-              <span>Broadcast</span>
-            </div>
+      </div>
+    </div>
+    <div id="section-story-type-trigger"></div>
+    <div id="section-story-type" class="section">
+      <div id="section-story-type-child">
+        <div id="section-story-type-header">
+          <h1>Telling your story well</h1>
+          <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner. The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</div>
+        </div>
+        <div id="story-types">
+          <div class="story-type">
+            <img src="images/icon-video.png" alt="Video icon" />
+            <span>Video</span>
+          </div>
+          <div class="story-type">
+            <img src="images/icon-branding.png" alt="Branding icon" />
+            <span>Branding</span>
+          </div>
+          <div class="story-type">
+            <img src="images/icon-music.png" alt="Music icon" />
+            <span>Music</span>
+          </div>
+          <div class="story-type">
+            <img src="images/icon-design.png" alt="Design icon" />
+            <span>Design</span>
+          </div>
+          <div class="story-type">
+            <img src="images/icon-digital.png" alt="Digital icon" />
+            <span>Digital</span>
+          </div>
+          <div class="story-type">
+            <img src="images/icon-social.png" alt="Social icon" />
+            <span>Social</span>
+          </div>
+          <div class="story-type">
+            <img src="images/icon-content.png" alt="Content icon" />
+            <span>Content</span>
+          </div>
+          <div class="story-type">
+            <img src="images/icon-broadcast.png" alt="Broadcast icon" />
+            <span>Broadcast</span>
           </div>
         </div>
       </div>
-    </div>-->
+    </div>
     <div id="section-workshop-trigger"></div>
     <div id="section-workshop" class="section">
       <div id="section-workshop-child">
