Styling contact section

--- a/app/index.html
+++ b/app/index.html
@@ -46,17 +46,20 @@
           <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
         </div>
         <div id="contact-right">
-          <div>Let&#8217;s find your best story and tell it together</div>
-          <input type="text" placeholder="NAME" />
-          <input type="text" placeholder="PHONE NUMBER" />
-          <input type="text" placeholder="E-MAIL ADDRESS" />
-          <input type="text" placeholder="SUBJECT" />
-          <input type="text" placeholder="MESSAGE" />
-          <a class="btn btn-default" href="#">FINDING YOUR STORY</a>
-          <div>
-            <span>The Narrator Group</span>
-            <span>Phone 720.295.8680</span>
-            <span>storyteller@narratorgroup.com</span>
+          <div id="contact-text">Let&#8217;s find your best story and tell it together</div>
+          <div id="contact-fields">
+            <input type="text" placeholder="NAME" />
+            <input type="text" placeholder="PHONE NUMBER" />
+            <input type="text" placeholder="E-MAIL ADDRESS" />
+            <input type="text" placeholder="SUBJECT" />
+            <input type="text" placeholder="MESSAGE" />
+            <hr>
+            <a class="btn btn-default" href="#">SEND</a>
+          </div>
+          <div id="contact-info">
+            <div>The Narrator Group</div>
+            <div>Phone 720.295.8680</div>
+            <div><a href="#">storyteller@narratorgroup.com</a></div>
           </div>
         </div>
       </div>
