Fixed styling on quotes and story types

--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
           <div id="workshop-quote">
             <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
             <div class="quote">
-              <div class="quote-text quote-blue">&quot;Real cleverness must stem<br> from knowledge of a product.&quot;</div>
+              <div class="quote-text quote-blue">&quot;Real cleverness must stem from knowledge of a product.&quot;</div>
               <div class="quote-attrib">BILL BERNBACH</div>
             </div>
             <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
@@ -141,7 +141,7 @@
           <div id="work-quote">
             <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
             <div class="quote">
-              <div class="quote-text quote-yellow">&quot;It&#8217;s indisputable that the best way to persuade<br> someone is by telling a compelling story.&quot;</div>
+              <div class="quote-text quote-yellow">&quot;It&#8217;s indisputable that the best way to persuade someone is by telling a compelling story.&quot;</div>
               <div class="quote-attrib">AD WEEK</div>
             </div>
             <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
@@ -169,7 +169,7 @@
           </div>
           <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
           <div class="quote">
-            <div class="quote-text quote-blue">&quot;Narrator Group&#8217;s work is the most effective<br> I&#8217;ve ever tested. That includes all the compaigns<br>  I measured during my 20 years at Gallup.&quot;</div>
+            <div class="quote-text quote-blue">&quot;Narrator Group&#8217;s work is the most effective I&#8217;ve ever tested. That includes all the compaigns I measured during my 20 years at Gallup.&quot;</div>
             <div class="quote-attrib">DAVID NUTTER, SIGMA GROUP</div>
           </div>
           <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
@@ -189,7 +189,7 @@
         </div>
         <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
         <div class="quote">
-          <div class="quote-text quote-orange">&quot;90% of people watch videos to <br> guide product decision making&quot;</div>
+          <div class="quote-text quote-orange">&quot;90% of people watch videos to guide product decision making&quot;</div>
           <div class="quote-attrib">BUSINESS2COMMUNITY</div>
         </div>
         <div class="relative quote-line"><div class="white-line"></div>&nbsp;</div>
