Further improved styling of contact section

--- a/app/index.html
+++ b/app/index.html
@@ -47,13 +47,14 @@
         </div>
         <div id="contact-right">
           <div id="contact-text">Let&#8217;s find your best story and tell it together</div>
+          <div class="line"></div>
           <div id="contact-fields">
             <input type="text" placeholder="NAME" />
             <input type="text" placeholder="PHONE NUMBER" />
             <input type="text" placeholder="E-MAIL ADDRESS" />
             <input type="text" placeholder="SUBJECT" />
             <input type="text" placeholder="MESSAGE" />
-            <hr>
+            <div class="line"></div>
             <a class="btn btn-default" href="#">SEND</a>
           </div>
           <div id="contact-info">
