Story types icons working in Chrome and Safari now

--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
           <h1>Telling your story well</h1>
           <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner. The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</div>
         </div>
-        <div id="story-types">
+        <div class="story-types">
           <div class="story-type">
             <img src="images/icon-video.png" alt="Video icon" />
             <span>Video</span>
@@ -89,6 +89,9 @@
             <img src="images/icon-design.png" alt="Design icon" />
             <span>Design</span>
           </div>
+        </div>
+        <div class="story-types">
+          
           <div class="story-type">
             <img src="images/icon-digital.png" alt="Digital icon" />
             <span>Digital</span>
