Added campfire background image

--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,11 @@
     </div>
     <div class="moon">
     </div>
+    <div id="mountains-image">
+      <img src="images/campfire-background.png" alt="Mountains">
+    </div>
     <video id="campfire-video" autoplay loop>
-      <source src="video/campfire-hd.mp4" type="video/mp4">
+      <source src="video/campfire-cropped.mp4" type="video/mp4">
       For the best experience, please view this site in a modern browser.
     </video>
     <div id="section-contact-trigger"></div>
