Updating starfield to latest spec.

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     <!--[if lt IE 10]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <canvas id="stars"></canvas>
     <canvas id="embers"></canvas>
     <div id="section-header">
       <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
@@ -91,7 +92,7 @@
           </div>
         </div>
         <div class="story-types">
-          
+
           <div class="story-type">
             <img src="images/icon-digital.png" alt="Digital icon" />
             <span>Digital</span>
@@ -252,7 +253,7 @@
     <!-- build:js scripts/plugins.js -->
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <!-- endbuild -->
-    <script src="/jd-js-lib/narrator/narrator.min.js"></script>
+    <script src="/jungle-js/narrator/narrator.min.js"></script>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <script src="scripts/parallax.js"></script>
