Misc css fixes and one typo fix

--- a/app/index.html
+++ b/app/index.html
@@ -172,7 +172,7 @@
         <h3>APPROACH</h3>
         <h1>Stories are better than ads</h1>
         <div class="column-left">
-          <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stoies we care about. But stories are different. A well-told stoy reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
+          <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stoies we care about. But stories are different. A well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
           </div>
           <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
           <div class="quote">
