Adjusted social icons and other campfire section work

--- a/app/index.html
+++ b/app/index.html
@@ -223,7 +223,7 @@
           </div>
         </div>
       </div>
-      <div class="social social-fixed">
+      <div class="social-fixed">
         <a href="#"><i class="fa fa-youtube"></i></a>
         <a href="#"><i class="fa fa-vimeo"></i></a>
         <a href="#"><i class="fa fa-facebook"></i></a>
