--- a/app/index.html
+++ b/app/index.html
@@ -209,14 +209,12 @@
       <div id="section-campfire-child">
         <div class="relative fill">
           <div id="campfire-wrapper">
-            <h1>Some brands have a good story</h1>
-            <h1>but aren&#8217;t telling it well.  Others don&#8217;t know or </h1>
-            <h1>have lost sight of their story.</h1>
+            <h1>Some brands have a good story but aren&#8217;t telling it well.  Others don&#8217;t know or have lost sight of their story.</h1>
             <a id="btn-find-story" class="btn btn-default" href="#">FINDING YOUR STORY</a>
             <a id="btn-telling-it" class="btn btn-default" href="#">TELLING IT BETTER</a>
           </div>
           <div id="campfire-aside">
-            <div>The human need for stories is enduring and mysterious. Great stories stay with us&#8212;and the best storytellers make us want to linger and find out what happens next.</div>
+            <div class="campfire-aside">The human need for stories is enduring and mysterious. Great stories stay with us&#8212;and the best storytellers make us want to linger and find out what happens next.</div>
           </div>
           <div class="scroll-up">
             <img alt="Scroll Up" src="images/scroll-up.png" width="100" height="100">
