--- a/app/index.html
+++ b/app/index.html
@@ -214,7 +214,7 @@
             <a id="btn-telling-it" class="btn btn-default" href="#">TELLING IT BETTER</a>
           </div>
           <div id="campfire-aside">
-            <div class="campfire-aside">The human need for stories is enduring and mysterious. Great stories stay with us&#8212;and the best storytellers make us want to linger and find out what happens next.</div>
+            <div>The human need for stories is enduring and mysterious. Great stories stay with us&#8212;and the best storytellers make us want to linger and find out what happens next.</div>
           </div>
           <div class="scroll-up">
             <img alt="Scroll Up" src="images/scroll-up.png" width="100" height="100">
