Styling updates for mobile

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
     <canvas id="embers"></canvas>
     <div id="section-header">
       <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
+      <img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" />
     </div>
     <div class="moon">
     </div>
@@ -120,7 +121,7 @@
     <div id="section-workshop" class="section">
       <div id="section-workshop-child">
         <div id="work-right">
-          <h4>Strategic Services</h4>
+          <h3>Strategic Services</h3>
           <h1>Finding your story</h1>
           <div class="main">Most maketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
           <div class="main">You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
