Mobile styles for Approach section with fixes for desktop

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,6 @@
           </div>
         </div>
         <div class="story-types">
-
           <div class="story-type">
             <img src="images/icon-digital.png" alt="Digital icon" />
             <span>Digital</span>
@@ -121,7 +120,7 @@
     <div id="section-workshop" class="section">
       <div id="section-workshop-child">
         <div id="work-right">
-          <h3>Strategic Services</h3>
+          <h3>STRATEGIC SERVICES</h3>
           <h1>Finding your story</h1>
           <div class="main">Most maketers have it backwards. They fixate on tactics rather than the message. And that&#8217;s why a lot of marketing fails. But if you get back to Why&#8212;your brand&#8217;s reason for being and the reason others should care&#8212;then things start to happen</div>
           <div class="main">You start to find your story. People start paying attention and they start telling others about you. We offer clients a unique process to uncover and find their unique and compelling story. We call it the Story Workshop.</div>
@@ -172,20 +171,22 @@
     <div id="section-approach-trigger"></div>
     <div id="section-approach" class="section">
       <div id="section-approach-child">
-        <h3>APPROACH</h3>
-        <h1>Stories are better than ads</h1>
-        <div class="column-left">
+        <div id="approach-main">
+          <h3>APPROACH</h3>
+          <h1>Stories are better than ads</h1>
           <div class="main">There&#8217;s a reason people tune out marketing messages. They&#8217;re flooded with them. Ads interrupt stoies we care about. But stories are different. A well-told story reveals truth and stays with us. It stirs our emotions and can lead us to action. Telling stories is how we naturally relate to each other. We grow brands by turning marketing messages into stories that people want to see and hear.
           </div>
+        </div>
+        <div id="approach-reel">
+          <img src="images/video-1.jpg" alt="Demo video" />
+        </div>
+        <div id="approach-quote">
           <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
           <div class="quote">
-            <div class="quote-text quote-blue">&quot;Narrator Group&#8217;s work is the most effective I&#8217;ve ever tested. That includes all the compaigns I measured during my 20 years at Gallup.&quot;</div>
+            <div class="quote-text">&quot;Narrator Group&#8217;s work is the most effective I&#8217;ve ever tested. That includes all the compaigns I measured during my 20 years at Gallup.&quot;</div>
             <div class="quote-attrib">DAVID NUTTER, SIGMA GROUP</div>
           </div>
           <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
-        </div>
-        <div class="column-right">
-          <img src="images/video-1.jpg" alt="Demo video" />
         </div>
       </div>
     </div>
