Fix website load to be smoother.

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,9 @@
       <img class="narrator-logo-full" src="images/logo-full.png" alt="Narrator group logo" />
       <img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" />
     </div>
-    <div class="moon">
+    <div class="moon-wrapper">
+      <div class="moon">
+      </div>
     </div>
     <div id="mountains-image">
       <img src="images/campfire-background.png" alt="Mountains">
