Fix load fade in transition to wait for video

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,11 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
+    <style>
+      body {
+        opacity: 0;
+      }
+    </style>
   </head>
   <body>
     <!--[if lt IE 10]>
