Refactor campfire position to improve performance and shift it down

--- a/app/index.html
+++ b/app/index.html
@@ -40,13 +40,18 @@
       <div class="moon">
       </div>
     </div>
-    <div id="mountains-image">
-      <img src="images/campfire-background.png" alt="Mountains">
+
+    <div class="campfire-video-container">
+      <div class="campfire-video-offset">
+        <video id="campfire-video" autoplay loop muted>
+          <source src="video/campfire-cropped.mp4" type="video/mp4">
+          For the best experience, please view this site in a modern browser.
+        </video>
+        <div id="mountains-image">
+          <img src="images/campfire-background.png" alt="Mountains">
+        </div>
+      </div>
     </div>
-    <video id="campfire-video" autoplay loop>
-      <source src="video/campfire-cropped.mp4" type="video/mp4">
-      For the best experience, please view this site in a modern browser.
-    </video>
     <div id="section-contact-trigger"></div>
     <div id="section-contact" class="section">
       <div id="section-contact-child">
